antlr/QLANGParser.py
# Generated from ./QLANG.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class QLANGParser ( Parser ):

    grammarFileName = "QLANG.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'const'", "'pass'", "'return'", "'if'", 
                     "'elif'", "'else'", "'enumerate'", "'case'", "'default'", 
                     "'and'", "'or'", "'auto'", "'while'", "'class'", "'namespace'", 
                     "'new'", "'.'", "'*'", "'('", "')'", "','", "':'", 
                     "';'", "'**'", "'='", "'['", "']'", "'+'", "'-'", "'/'", 
                     "'%'", "'{'", "'}'", "'<'", "'>'", "'=='", "'>='", 
                     "'<='", "'!='", "'@'", "'->'", "'+='", "'-='", "'*='", 
                     "'/='", "'%='" ]

    symbolicNames = [ "<INVALID>", "CONST", "PASS", "RETURN", "IF", "ELIF", 
                      "ELSE", "ENUMERATE", "CASE", "DEFAULT", "AND", "OR", 
                      "AUTO", "WHILE", "CLASS", "NS", "NEW", "DOT", "STAR", 
                      "OPEN_PAREN", "CLOSE_PAREN", "COMMA", "COLON", "SEMI_COLON", 
                      "POWER", "ASSIGN", "OPEN_BRACK", "CLOSE_BRACK", "ADD", 
                      "MINUS", "DIV", "MOD", "OPEN_BRACE", "CLOSE_BRACE", 
                      "LESS_THAN", "GREATER_THAN", "EQUALS", "GT_EQ", "LT_EQ", 
                      "NOT_EQ", "AT", "ARROW", "ADD_ASSIGN", "SUB_ASSIGN", 
                      "MULT_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "Comment", 
                      "WS", "Newline", "Interger", "Decimal", "Identifier", 
                      "String" ]

    RULE_block = 0
    RULE_statement = 1
    RULE_smallBlock = 2
    RULE_literalValue = 3
    RULE_expression = 4
    RULE_declareVariable = 5
    RULE_defineVariable = 6
    RULE_assignVariable = 7
    RULE_functionArgument = 8
    RULE_functionHead = 9
    RULE_functionReturn = 10
    RULE_defineFunction = 11
    RULE_functionCall = 12
    RULE_ifCondition = 13
    RULE_elifCondition = 14
    RULE_elseCondition = 15
    RULE_fullIf = 16
    RULE_fullEnumerate = 17
    RULE_caseCondition = 18
    RULE_defaultCondition = 19
    RULE_whileLoop = 20
    RULE_defineDecorator = 21
    RULE_callDecorator = 22

    ruleNames =  [ "block", "statement", "smallBlock", "literalValue", "expression", 
                   "declareVariable", "defineVariable", "assignVariable", 
                   "functionArgument", "functionHead", "functionReturn", 
                   "defineFunction", "functionCall", "ifCondition", "elifCondition", 
                   "elseCondition", "fullIf", "fullEnumerate", "caseCondition", 
                   "defaultCondition", "whileLoop", "defineDecorator", "callDecorator" ]

    EOF = Token.EOF
    CONST=1
    PASS=2
    RETURN=3
    IF=4
    ELIF=5
    ELSE=6
    ENUMERATE=7
    CASE=8
    DEFAULT=9
    AND=10
    OR=11
    AUTO=12
    WHILE=13
    CLASS=14
    NS=15
    NEW=16
    DOT=17
    STAR=18
    OPEN_PAREN=19
    CLOSE_PAREN=20
    COMMA=21
    COLON=22
    SEMI_COLON=23
    POWER=24
    ASSIGN=25
    OPEN_BRACK=26
    CLOSE_BRACK=27
    ADD=28
    MINUS=29
    DIV=30
    MOD=31
    OPEN_BRACE=32
    CLOSE_BRACE=33
    LESS_THAN=34
    GREATER_THAN=35
    EQUALS=36
    GT_EQ=37
    LT_EQ=38
    NOT_EQ=39
    AT=40
    ARROW=41
    ADD_ASSIGN=42
    SUB_ASSIGN=43
    MULT_ASSIGN=44
    DIV_ASSIGN=45
    MOD_ASSIGN=46
    Comment=47
    WS=48
    Newline=49
    Interger=50
    Decimal=51
    Identifier=52
    String=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PASS(self):
            return self.getToken(QLANGParser.PASS, 0)

        def SEMI_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(QLANGParser.SEMI_COLON)
            else:
                return self.getToken(QLANGParser.SEMI_COLON, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QLANGParser.StatementContext)
            else:
                return self.getTypedRuleContext(QLANGParser.StatementContext,i)


        def smallBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QLANGParser.SmallBlockContext)
            else:
                return self.getTypedRuleContext(QLANGParser.SmallBlockContext,i)


        def getRuleIndex(self):
            return QLANGParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = QLANGParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QLANGParser.CONST, QLANGParser.RETURN, QLANGParser.IF, QLANGParser.ENUMERATE, QLANGParser.WHILE, QLANGParser.CLOSE_BRACE, QLANGParser.AT, QLANGParser.Identifier]:
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QLANGParser.CONST) | (1 << QLANGParser.RETURN) | (1 << QLANGParser.IF) | (1 << QLANGParser.ENUMERATE) | (1 << QLANGParser.WHILE) | (1 << QLANGParser.AT) | (1 << QLANGParser.Identifier))) != 0):
                    self.state = 50
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 46
                        self.statement()
                        self.state = 47
                        self.match(QLANGParser.SEMI_COLON)
                        pass

                    elif la_ == 2:
                        self.state = 49
                        self.smallBlock()
                        pass


                    self.state = 54
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [QLANGParser.PASS]:
                self.state = 55
                self.match(QLANGParser.PASS)
                self.state = 56
                self.match(QLANGParser.SEMI_COLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declareVariable(self):
            return self.getTypedRuleContext(QLANGParser.DeclareVariableContext,0)


        def defineVariable(self):
            return self.getTypedRuleContext(QLANGParser.DefineVariableContext,0)


        def assignVariable(self):
            return self.getTypedRuleContext(QLANGParser.AssignVariableContext,0)


        def functionReturn(self):
            return self.getTypedRuleContext(QLANGParser.FunctionReturnContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(QLANGParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return QLANGParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = QLANGParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.declareVariable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.defineVariable()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.assignVariable()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 62
                self.functionReturn()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 63
                self.functionCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SmallBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defineFunction(self):
            return self.getTypedRuleContext(QLANGParser.DefineFunctionContext,0)


        def defineDecorator(self):
            return self.getTypedRuleContext(QLANGParser.DefineDecoratorContext,0)


        def fullIf(self):
            return self.getTypedRuleContext(QLANGParser.FullIfContext,0)


        def fullEnumerate(self):
            return self.getTypedRuleContext(QLANGParser.FullEnumerateContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(QLANGParser.WhileLoopContext,0)


        def getRuleIndex(self):
            return QLANGParser.RULE_smallBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSmallBlock" ):
                return visitor.visitSmallBlock(self)
            else:
                return visitor.visitChildren(self)




    def smallBlock(self):

        localctx = QLANGParser.SmallBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_smallBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QLANGParser.Identifier]:
                self.state = 66
                self.defineFunction()
                pass
            elif token in [QLANGParser.AT]:
                self.state = 67
                self.defineDecorator()
                pass
            elif token in [QLANGParser.IF]:
                self.state = 68
                self.fullIf()
                pass
            elif token in [QLANGParser.ENUMERATE]:
                self.state = 69
                self.fullEnumerate()
                pass
            elif token in [QLANGParser.WHILE]:
                self.state = 70
                self.whileLoop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Interger(self):
            return self.getToken(QLANGParser.Interger, 0)

        def Identifier(self):
            return self.getToken(QLANGParser.Identifier, 0)

        def String(self):
            return self.getToken(QLANGParser.String, 0)

        def Decimal(self):
            return self.getToken(QLANGParser.Decimal, 0)

        def getRuleIndex(self):
            return QLANGParser.RULE_literalValue

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteralValue" ):
                return visitor.visitLiteralValue(self)
            else:
                return visitor.visitChildren(self)




    def literalValue(self):

        localctx = QLANGParser.LiteralValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_literalValue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QLANGParser.Interger) | (1 << QLANGParser.Decimal) | (1 << QLANGParser.Identifier) | (1 << QLANGParser.String))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literalValue(self):
            return self.getTypedRuleContext(QLANGParser.LiteralValueContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(QLANGParser.FunctionCallContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QLANGParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(QLANGParser.ExpressionContext,i)


        def POWER(self):
            return self.getToken(QLANGParser.POWER, 0)

        def STAR(self):
            return self.getToken(QLANGParser.STAR, 0)

        def DIV(self):
            return self.getToken(QLANGParser.DIV, 0)

        def MOD(self):
            return self.getToken(QLANGParser.MOD, 0)

        def ADD(self):
            return self.getToken(QLANGParser.ADD, 0)

        def MINUS(self):
            return self.getToken(QLANGParser.MINUS, 0)

        def EQUALS(self):
            return self.getToken(QLANGParser.EQUALS, 0)

        def NOT_EQ(self):
            return self.getToken(QLANGParser.NOT_EQ, 0)

        def GREATER_THAN(self):
            return self.getToken(QLANGParser.GREATER_THAN, 0)

        def LESS_THAN(self):
            return self.getToken(QLANGParser.LESS_THAN, 0)

        def AND(self):
            return self.getToken(QLANGParser.AND, 0)

        def OR(self):
            return self.getToken(QLANGParser.OR, 0)

        def getRuleIndex(self):
            return QLANGParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = QLANGParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 76
                self.literalValue()
                pass

            elif la_ == 2:
                self.state = 77
                self.functionCall()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 98
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = QLANGParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 80
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 81
                        self.match(QLANGParser.POWER)
                        self.state = 82
                        self.expression(7)
                        pass

                    elif la_ == 2:
                        localctx = QLANGParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 83
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 84
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QLANGParser.STAR) | (1 << QLANGParser.DIV) | (1 << QLANGParser.MOD))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 85
                        self.expression(6)
                        pass

                    elif la_ == 3:
                        localctx = QLANGParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 86
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 87
                        _la = self._input.LA(1)
                        if not(_la==QLANGParser.ADD or _la==QLANGParser.MINUS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 88
                        self.expression(5)
                        pass

                    elif la_ == 4:
                        localctx = QLANGParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 89
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 90
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QLANGParser.LESS_THAN) | (1 << QLANGParser.GREATER_THAN) | (1 << QLANGParser.EQUALS) | (1 << QLANGParser.NOT_EQ))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 91
                        self.expression(4)
                        pass

                    elif la_ == 5:
                        localctx = QLANGParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 92
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 93
                        self.match(QLANGParser.AND)
                        self.state = 94
                        self.expression(3)
                        pass

                    elif la_ == 6:
                        localctx = QLANGParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 95
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 96
                        self.match(QLANGParser.OR)
                        self.state = 97
                        self.expression(2)
                        pass

             
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DeclareVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(QLANGParser.Identifier)
            else:
                return self.getToken(QLANGParser.Identifier, i)

        def AT(self):
            return self.getToken(QLANGParser.AT, 0)

        def AUTO(self):
            return self.getToken(QLANGParser.AUTO, 0)

        def callDecorator(self):
            return self.getTypedRuleContext(QLANGParser.CallDecoratorContext,0)


        def CONST(self):
            return self.getToken(QLANGParser.CONST, 0)

        def getRuleIndex(self):
            return QLANGParser.RULE_declareVariable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclareVariable" ):
                return visitor.visitDeclareVariable(self)
            else:
                return visitor.visitChildren(self)




    def declareVariable(self):

        localctx = QLANGParser.DeclareVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declareVariable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QLANGParser.AT]:
                self.state = 103
                self.callDecorator()
                pass
            elif token in [QLANGParser.CONST]:
                self.state = 104
                self.match(QLANGParser.CONST)
                pass
            elif token in [QLANGParser.Identifier]:
                pass
            else:
                pass
            self.state = 107
            self.match(QLANGParser.Identifier)
            self.state = 108
            self.match(QLANGParser.AT)
            self.state = 109
            _la = self._input.LA(1)
            if not(_la==QLANGParser.AUTO or _la==QLANGParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefineVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declareVariable(self):
            return self.getTypedRuleContext(QLANGParser.DeclareVariableContext,0)


        def ASSIGN(self):
            return self.getToken(QLANGParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(QLANGParser.ExpressionContext,0)


        def getRuleIndex(self):
            return QLANGParser.RULE_defineVariable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefineVariable" ):
                return visitor.visitDefineVariable(self)
            else:
                return visitor.visitChildren(self)




    def defineVariable(self):

        localctx = QLANGParser.DefineVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_defineVariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.declareVariable()
            self.state = 112
            self.match(QLANGParser.ASSIGN)
            self.state = 113
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(QLANGParser.Identifier, 0)

        def ASSIGN(self):
            return self.getToken(QLANGParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(QLANGParser.ExpressionContext,0)


        def getRuleIndex(self):
            return QLANGParser.RULE_assignVariable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignVariable" ):
                return visitor.visitAssignVariable(self)
            else:
                return visitor.visitChildren(self)




    def assignVariable(self):

        localctx = QLANGParser.AssignVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignVariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(QLANGParser.Identifier)
            self.state = 116
            self.match(QLANGParser.ASSIGN)
            self.state = 117
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declareVariable(self):
            return self.getTypedRuleContext(QLANGParser.DeclareVariableContext,0)


        def defineVariable(self):
            return self.getTypedRuleContext(QLANGParser.DefineVariableContext,0)


        def getRuleIndex(self):
            return QLANGParser.RULE_functionArgument

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionArgument" ):
                return visitor.visitFunctionArgument(self)
            else:
                return visitor.visitChildren(self)




    def functionArgument(self):

        localctx = QLANGParser.FunctionArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_functionArgument)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.declareVariable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.defineVariable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionHeadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(QLANGParser.Identifier)
            else:
                return self.getToken(QLANGParser.Identifier, i)

        def OPEN_PAREN(self):
            return self.getToken(QLANGParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(QLANGParser.CLOSE_PAREN, 0)

        def functionArgument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QLANGParser.FunctionArgumentContext)
            else:
                return self.getTypedRuleContext(QLANGParser.FunctionArgumentContext,i)


        def ARROW(self):
            return self.getToken(QLANGParser.ARROW, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(QLANGParser.COMMA)
            else:
                return self.getToken(QLANGParser.COMMA, i)

        def getRuleIndex(self):
            return QLANGParser.RULE_functionHead

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionHead" ):
                return visitor.visitFunctionHead(self)
            else:
                return visitor.visitChildren(self)




    def functionHead(self):

        localctx = QLANGParser.FunctionHeadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functionHead)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(QLANGParser.Identifier)
            self.state = 124
            self.match(QLANGParser.OPEN_PAREN)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QLANGParser.CONST) | (1 << QLANGParser.AT) | (1 << QLANGParser.Identifier))) != 0):
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 125
                        self.functionArgument()
                        self.state = 126
                        self.match(QLANGParser.COMMA) 
                    self.state = 132
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                self.state = 133
                self.functionArgument()


            self.state = 136
            self.match(QLANGParser.CLOSE_PAREN)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QLANGParser.ARROW:
                self.state = 137
                self.match(QLANGParser.ARROW)
                self.state = 138
                self.match(QLANGParser.Identifier)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionReturnContext(ParserRuleContext):
        __slots__ = 'parser'
